# kinect_detect

devel/: .catkin  .rosinstall  local_setup.sh
devel/include/freenect_camera/: FreenectConfig.h
devel/lib/aruco_detector/: aruco_detector.py
devel/lib/pkgconfig/: aruco_detector.pc  aruco_image.pc  freenect_camera.pc  freenect_launch.pc
devel/lib/python3/dist-packages/freenect_camera/cfg/: FreenectConfig.py
devel/share/aruco_detector/cmake/: aruco_detectorConfig.cmake
devel/share/aruco_image/cmake/: aruco_imageConfig.cmake
devel/share/freenect_camera/cmake/: freenect_cameraConfig.cmake
devel/share/freenect_launch/cmake/: freenect_launchConfig.cmake
src/aruco_detector/: CMakeLists.txt  package.xml
src/aruco_detector/scripts/: tst.py
src/aruco_detector/scripts/aruco/: camera.py
src/aruco_image/: CMakeLists.txt  package.xml
src/aruco_image/scripts/: aruco_node.py  aruco_tst.py  camera_calibaration.py  image_capture.py  pid_cam.py
src/aruco_image/scripts/calib_data/: MultiMatrix.npz
